apps/production/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: production
  labels:
    name: nginx
  annotations:
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - plussoftware.com.br
    secretName: letsencrypt-production-tls
  rules:
  - host: plussoftware.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
